Clean code
Signed-off-by: Florent MILLOT <millotflo@gmail.com>